# atomadic-lang

./: .gitignore  CHANGELOG.md  LICENSE  README.md  calc_v10.atm  corpus.txt  corpus_v06.txt  corpus_v07.txt  corpus_v08.txt  corpus_v09.txt  corpus_v16.txt  pyproject.toml  tokenizer.json  tokenizer_v06.json  tokenizer_v07.json  tokenizer_v08.json  tokenizer_v09.json  tokenizer_v15.json  tokenizer_v16.json  tokenizer_v25.json  tokenizer_v26.json
.github/workflows/: ci.yml
.wrangler/cache/: wrangler-account.json
docs/: AUDIT.md  BITDISTILL_PLAN.md  BREAKTHROUGHS.md  EPIPHANIES.md  FORGE_DELUXE_EXPERIENCE.md  FORGE_EXPERIENCE.md  LINEAGE.md  PAPER_v2.md  PORTFOLIO.md  REFINED_DESIGN.md  RELEASE.md  SPEC_v0.md  SWARM_AUDIT.md  wgrammar_audit_v15.json
src/atomadic_lang/: __init__.py  __main__.py
src/atomadic_lang/a0_qk_constants/: __init__.py  atm_grammar.py  atm_types.py  bpe_config.py  design_anchors.py  grammar_states.py  wgrammar.py
src/atomadic_lang/a1_at_functions/: __init__.py  atm_emit.py  atm_parse.py  body_to_atm.py  corpus_analysis.py  mask_evaluator.py  refinement_eval.py  tier_infer.py  type_to_sigil.py  wgrammar_audit.py  wgrammar_enforce.py
tests/: _paths.py  conftest.py  test_design_anchors.py  test_e2e_cli.py  test_holdout_density.py  test_human_roundtrip.py  test_latency.py  test_lower.py  test_property_roundtrip.py  test_raise.py  test_synthetic.py  test_tokenizer.py  test_wgrammar.py  test_wgrammar_enforce.py
tests/fixtures/: __init__.py
tools/: README.md  merge_audit.config.example.json  merge_audit.config.full.json  merge_audit.py
(+18 files in other folders)
