[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atomadic-lang"
version = "3.4.0"
description = "Atomadic Lang (.atm) — a verified intermediate representation for AI-emitted code."
readme = "README.md"
requires-python = ">=3.10"
license = "BUSL-1.1"
license-files = ["LICENSE"]
authors = [{ name = "Atomadic" }]
keywords = ["ai", "intermediate-representation", "agents", "tokenizer", "verification"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.12",
    "tokenizers>=0.20",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "hypothesis>=6.100",
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
atomadic-lang = "atomadic_lang.a4_sy_orchestration.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
atomadic_lang = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W"]
